Fix PR c++/69091 (ICE with operator overload having 'auto' return type)

gcc/cp/ChangeLog:

	PR c++/69091
	* pt.c (type_dependent_expression_p): For a function template
	specialization, a type is dependent iff any of its template
	arguments are.

gcc/testsuite/ChangeLog:

	PR c++/69091
	* g++.dg/template/pr69091.C: New test.

From-SVN: r232463